<?xml version="1.0" encoding="utf-8"?>
<android.support.constraint.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@drawable/background"
    tools:context="com.mycooksapp.mycooks.MainActivity">

    <android.support.v7.widget.Toolbar
        android:id="@+id/mainToolbar"
        android:layout_width="0dp"
        android:layout_height="56dp"
        android:background="?attr/colorPrimary"
        android:elevation="10dp"
        android:minHeight="?attr/actionBarSize"
        android:theme="?attr/actionBarTheme"
        app:layout_constraintLeft_toLeftOf="parent"
        app:layout_constraintRight_toRightOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:popupTheme="@style/ToolbarPopupMenuStyle">

        <TextView
            android:id="@+id/mainToolbarTitle"
            android:layout_width="125dp"
            android:layout_height="40dp"
            android:fontFamily="casual"
            android:text="@string/app_name"
            android:textAlignment="center"
            android:textColor="@color/colorWhite"
            android:textSize="30sp"
            tools:layout_editor_absoluteX="16dp"
            tools:layout_editor_absoluteY="3dp" />

    </android.support.v7.widget.Toolbar>

    <ScrollView
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:layout_marginTop="55dp"
        app:layout_constraintTop_toTopOf="parent">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="vertical"
            android:paddingBottom="8dp">

            <TextView
                android:id="@+id/mainMyRecipesTitle"
                android:layout_width="158dp"
                android:layout_height="wrap_content"
                android:layout_marginEnd="15dp"
                android:layout_marginStart="40dp"
                android:layout_marginTop="16dp"
                android:background="@color/colorWhite"
                android:elevation="5dp"
                android:fontFamily="casual"
                android:paddingEnd="8dp"
                android:paddingLeft="8dp"
                android:paddingRight="8dp"
                android:paddingStart="8dp"
                android:text="@string/my_recipes"
                android:textSize="24sp" />

            <RelativeLayout
                android:id="@+id/mainMyRecipesLayout"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginEnd="15dp"
                android:layout_marginLeft="15dp"
                android:layout_marginRight="15dp"
                android:layout_marginStart="15dp"
                android:background="@color/colorWhite"
                android:elevation="5dp">

                <FrameLayout
                    android:layout_width="125dp"
                    android:layout_height="75dp"
                    android:layout_marginStart="3dp"
                    android:layout_marginTop="3dp"
                    android:background="@drawable/meal_icon">

                    <TextView
                        android:id="@+id/mainRecipeCategoryTitle1"
                        android:layout_width="125dp"
                        android:layout_height="75dp"
                        android:background="@color/colorBackgroundOverlay"
                        android:gravity="bottom"
                        android:paddingBottom="5dp"
                        android:text="@string/recipe_categories"
                        android:textAlignment="center"
                        android:textAppearance="@style/TextAppearance.AppCompat.Medium"
                        android:textColor="@color/colorBtnTxt"
                        android:textSize="18sp"
                        android:textStyle="bold" />

                    <Button
                        android:id="@+id/mainRecipeCategory1"
                        android:layout_width="125dp"
                        android:layout_height="75dp"
                        android:background="?android:attr/selectableItemBackground"
                        android:gravity="bottom|center_horizontal" />
                </FrameLayout>

                <FrameLayout
                    android:layout_width="125dp"
                    android:layout_height="75dp"
                    android:layout_marginStart="128dp"
                    android:layout_marginTop="3dp"
                    android:background="@drawable/salad_icon">

                    <TextView
                        android:id="@+id/mainRecipeCategoryTitle2"
                        android:layout_width="125dp"
                        android:layout_height="75dp"
                        android:background="@color/colorBackgroundOverlay"
                        android:gravity="bottom"
                        android:paddingBottom="5dp"
                        android:text="@string/category_all_recipes"
                        android:textAlignment="center"
                        android:textAppearance="@style/TextAppearance.AppCompat.Medium"
                        android:textColor="@color/colorBtnTxt"
                        android:textSize="18sp"
                        android:textStyle="bold" />

                    <Button
                        android:id="@+id/mainRecipeCategory2"
                        android:layout_width="125dp"
                        android:layout_height="75dp"
                        android:background="?android:attr/selectableItemBackground"
                        android:gravity="bottom|center_horizontal" />
                </FrameLayout>

                <FrameLayout
                    android:layout_width="125dp"
                    android:layout_height="75dp"
                    android:layout_marginStart="253dp"
                    android:layout_marginTop="3dp"
                    android:background="@drawable/egg_icon">

                    <TextView
                        android:id="@+id/mainRecipeCategoryTitle3"
                        android:layout_width="125dp"
                        android:layout_height="75dp"
                        android:background="@color/colorBackgroundOverlay"
                        android:gravity="bottom"
                        android:paddingBottom="5dp"
                        android:text="@string/category_breakfast"
                        android:textAlignment="center"
                        android:textAppearance="@style/TextAppearance.AppCompat.Medium"
                        android:textColor="@color/colorBtnTxt"
                        android:textSize="18sp"
                        android:textStyle="bold" />

                    <Button
                        android:id="@+id/mainRecipeCategory3"
                        android:layout_width="125dp"
                        android:layout_height="75dp"
                        android:background="?android:attr/selectableItemBackground"
                        android:gravity="bottom|center_horizontal" />

                </FrameLayout>

                <FrameLayout
                    android:layout_width="125dp"
                    android:layout_height="75dp"
                    android:layout_marginBottom="3dp"
                    android:layout_marginStart="3dp"
                    android:layout_marginTop="78dp"
                    android:background="@drawable/sandwich_icon">

                    <TextView
                        android:id="@+id/mainRecipeCategoryTitle4"
                        android:layout_width="125dp"
                        android:layout_height="75dp"
                        android:background="@color/colorBackgroundOverlay"
                        android:gravity="bottom"
                        android:paddingBottom="5dp"
                        android:text="@string/category_lunch"
                        android:textAlignment="center"
                        android:textAppearance="@style/TextAppearance.AppCompat.Medium"
                        android:textColor="@color/colorBtnTxt"
                        android:textSize="18sp"
                        android:textStyle="bold" />

                    <Button
                        android:id="@+id/mainRecipeCategory4"
                        android:layout_width="125dp"
                        android:layout_height="75dp"
                        android:background="?android:attr/selectableItemBackground"
                        android:gravity="bottom|center_horizontal" />
                </FrameLayout>

                <FrameLayout
                    android:layout_width="125dp"
                    android:layout_height="75dp"
                    android:layout_marginBottom="3dp"
                    android:layout_marginStart="128dp"
                    android:layout_marginTop="78dp"
                    android:background="@drawable/turkey_icon">

                    <TextView
                        android:id="@+id/mainRecipeCategoryTitle5"
                        android:layout_width="125dp"
                        android:layout_height="75dp"
                        android:background="@color/colorBackgroundOverlay"
                        android:gravity="bottom"
                        android:paddingBottom="5dp"
                        android:text="@string/category_dinner"
                        android:textAlignment="center"
                        android:textAppearance="@style/TextAppearance.AppCompat.Medium"
                        android:textColor="@color/colorBtnTxt"
                        android:textSize="18sp"
                        android:textStyle="bold" />

                    <Button
                        android:id="@+id/mainRecipeCategory5"
                        android:layout_width="125dp"
                        android:layout_height="75dp"
                        android:background="?android:attr/selectableItemBackground"
                        android:gravity="bottom|center_horizontal" />
                </FrameLayout>

                <FrameLayout
                    android:layout_width="125dp"
                    android:layout_height="75dp"
                    android:layout_marginBottom="3dp"
                    android:layout_marginStart="253dp"
                    android:layout_marginTop="78dp"
                    android:background="@drawable/cupcake_icon">

                    <TextView
                        android:id="@+id/mainRecipeCategoryTitle6"
                        android:layout_width="125dp"
                        android:layout_height="75dp"
                        android:background="@color/colorBackgroundOverlay"
                        android:gravity="bottom"
                        android:paddingBottom="5dp"
                        android:text="@string/category_dessert"
                        android:textAlignment="center"
                        android:textAppearance="@style/TextAppearance.AppCompat.Medium"
                        android:textColor="@color/colorBtnTxt"
                        android:textSize="18sp"
                        android:textStyle="bold" />

                    <Button
                        android:id="@+id/mainRecipeCategory6"
                        android:layout_width="125dp"
                        android:layout_height="75dp"
                        android:background="?android:attr/selectableItemBackground"
                        android:gravity="bottom|center_horizontal" />

                </FrameLayout>

            </RelativeLayout>

            <TextView
                android:id="@+id/mainMyGroceriesTitle"
                android:layout_width="158dp"
                android:layout_height="wrap_content"
                android:layout_marginEnd="15dp"
                android:layout_marginStart="40dp"
                android:layout_marginTop="25dp"
                android:background="@color/colorWhite"
                android:elevation="5dp"
                android:fontFamily="casual"
                android:paddingEnd="8dp"
                android:paddingLeft="8dp"
                android:paddingRight="8dp"
                android:paddingStart="8dp"
                android:text="@string/my_groceries"
                android:textSize="24sp" />

            <RelativeLayout
                android:id="@+id/mainMyGroceriesLayout"
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:layout_marginEnd="15dp"
                android:layout_marginLeft="15dp"
                android:layout_marginRight="15dp"
                android:layout_marginStart="15dp"
                android:background="@color/colorWhite"
                android:elevation="5dp">

                <FrameLayout
                    android:layout_width="125dp"
                    android:layout_height="75dp"
                    android:layout_marginBottom="3dp"
                    android:layout_marginStart="3dp"
                    android:layout_marginTop="3dp"
                    android:background="@drawable/groceries_icon">

                    <TextView
                        android:id="@+id/mainGroceryListTitle1"
                        android:layout_width="125dp"
                        android:layout_height="75dp"
                        android:background="@color/colorBackgroundOverlay"
                        android:gravity="bottom"
                        android:paddingBottom="5dp"
                        android:text="@string/test_date"
                        android:textAlignment="center"
                        android:textAppearance="@style/TextAppearance.AppCompat.Medium"
                        android:textColor="@color/colorBtnTxt"
                        android:textSize="14sp"
                        android:textStyle="bold" />

                    <Button
                        android:id="@+id/mainGroceryList1"
                        android:layout_width="125dp"
                        android:layout_height="75dp"
                        android:background="?android:attr/selectableItemBackground"
                        android:gravity="bottom|center_horizontal" />
                </FrameLayout>

                <FrameLayout
                    android:layout_width="125dp"
                    android:layout_height="75dp"
                    android:layout_marginBottom="3dp"
                    android:layout_marginStart="128dp"
                    android:layout_marginTop="3dp"
                    android:background="@drawable/groceries_icon">

                    <TextView
                        android:id="@+id/mainGroceryListTitle2"
                        android:layout_width="125dp"
                        android:layout_height="75dp"
                        android:background="@color/colorBackgroundOverlay"
                        android:gravity="bottom"
                        android:paddingBottom="5dp"
                        android:text="@string/test_date"
                        android:textAlignment="center"
                        android:textAppearance="@style/TextAppearance.AppCompat.Medium"
                        android:textColor="@color/colorBtnTxt"
                        android:textSize="14sp"
                        android:textStyle="bold" />

                    <Button
                        android:id="@+id/mainGroceryList2"
                        android:layout_width="125dp"
                        android:layout_height="75dp"
                        android:background="?android:attr/selectableItemBackground"
                        android:gravity="bottom|center_horizontal" />
                </FrameLayout>

                <FrameLayout
                    android:layout_width="125dp"
                    android:layout_height="75dp"
                    android:layout_marginBottom="3dp"
                    android:layout_marginStart="253dp"
                    android:layout_marginTop="3dp"
                    android:background="@drawable/groceries_icon">

                    <TextView
                        android:id="@+id/mainGroceryListTitle3"
                        android:layout_width="125dp"
                        android:layout_height="75dp"
                        android:background="@color/colorBackgroundOverlay"
                        android:gravity="bottom"
                        android:paddingBottom="5dp"
                        android:text="@string/test_date"
                        android:textAlignment="center"
                        android:textAppearance="@style/TextAppearance.AppCompat.Medium"
                        android:textColor="@color/colorBtnTxt"
                        android:textSize="14sp"
                        android:textStyle="bold" />

                    <Button
                        android:id="@+id/mainGroceryList3"
                        android:layout_width="125dp"
                        android:layout_height="75dp"
                        android:background="?android:attr/selectableItemBackground"
                        android:gravity="bottom|center_horizontal" />

                </FrameLayout>

            </RelativeLayout>

        </LinearLayout>
    </ScrollView>


</android.support.constraint.ConstraintLayout>
